<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FacAdemics</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="subject">Subject Title</string>
    <string name="loginCreds">Login Credentials</string>
    <string name="refresh">Refresh Button</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="facultyID">Faculty ID</string>
    <string name="password">Password</string>
    <string name="setAutoUpload">Set Auto Upload</string>
    <string name="toogleButtonSetAutoUpload">Toggle Button for Set Auto Upload</string>
    <string name="captcha">Enter the Captcha as Shown</string>
    <string name="captchaImage">Captcha Image</string>
    <string name="refreshCaptcha">Refresh Captcha</string>
    <string name="subjecCode">SCD</string>
    <string name="classnum">Class Number</string>
    <string name="slot">Slot</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="lastRef">Last Refreshed On</string>
    <string name="regnum">Registration Number</string>
    <string name="name">Name</string>
    <string name="present">Present</string>
    <string name="toDate">Date And Time</string>
    <string name="saveBtn">Save Attendance</string>
    <string name="selSlot">Slot</string>
	<string name="selSubCode">Subject Code</string>
	<string name="selDate">Date</string>
</resources>
