<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:gravity="left"
    android:orientation="horizontal"
    android:padding="5dip" >

    <TextView
        android:id="@+id/subCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/subjecCode" />

    <TextView
        android:id="@+id/slot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subCode"
        android:layout_below="@+id/subCode"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/slot" />

    <TextView
        android:id="@+id/subName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/subCode"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/subCode"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/subject" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subName"
        android:layout_alignTop="@+id/classNum"
        android:text="@string/classnum"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/classNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/slot"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/classnum"
        android:textSize="16sp" />
    
</RelativeLayout>

