<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/attnList"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/selSlotAttn"
        android:divider="@color/abs__background_holo_light"
        android:dividerHeight="16dp" >

    </ListView>

    <TextView
        android:id="@+id/selSlotAttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:text="@string/selSlot"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selSubCodeAttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attnList"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/selSlotAttn"
        android:text="@string/selSubCode"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attnList"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/selSubCodeAttn"
        android:text="@string/selDate"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>